--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,15 +3,20 @@ cmake_minimum_required (VERSION 2.6 FATAL_ERROR)
 project      (pcd_viewer)
 find_package (Qt4 REQUIRED)
 find_package (VTK REQUIRED)
-find_package (PCL 1.7.1 REQUIRED)
+find_package (PCL 1.8.0 REQUIRED)
 
 include_directories (${PCL_INCLUDE_DIRS})
 link_directories    (${PCL_LIBRARY_DIRS})
 add_definitions     (${PCL_DEFINITIONS})
 
-set  (project_SOURCES main.cpp pclviewer.cpp colordialog.cpp triangulationdialog.cpp)
-set  (project_HEADERS pclviewer.h colordialog.h triangulationdialog.h)
-set  (project_FORMS   pclviewer.ui colordialog.ui triangulationdialog.ui)
+set  (project_SOURCES main.cpp pclviewer.cpp colordialog.cpp triangulationdialog.cpp
+		triangulation_meshes.cpp tourdialog.cpp
+	)
+
+set  (project_HEADERS pclviewer.h colordialog.h triangulationdialog.h
+		triangulation_meshes.h tourdialog.h)
+
+set  (project_FORMS   pclviewer.ui colordialog.ui triangulationdialog.ui tourdialog.ui)
 set  (VTK_LIBRARIES   vtkRendering vtkGraphics vtkHybrid QVTK)
 
 QT4_WRAP_CPP (project_HEADERS_MOC   ${project_HEADERS})
