--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,13 +10,19 @@ link_directories    (${PCL_LIBRARY_DIRS})
 add_definitions     (${PCL_DEFINITIONS})
 
 set  (project_SOURCES main.cpp pclviewer.cpp colordialog.cpp triangulationdialog.cpp
-		triangulation_meshes.cpp tourdialog.cpp boundingbox.cpp	worker.cpp)
+                triangulation_meshes.cpp tourdialog.cpp boundingbox.cpp	worker.cpp
+                setcameradialog.cpp
+        )
 
 set  (project_HEADERS pclviewer.h colordialog.h triangulationdialog.h
-		triangulation_meshes.h tourdialog.h boundingbox.h worker.h)
+                triangulation_meshes.h setcameradialog.h boundingbox.h worker.h
+                setcameradialog.h tourdialog.h
+        )
 
-set  (project_FORMS   pclviewer.ui colordialog.ui triangulationdialog.ui tourdialog.ui)
-set  (VTK_LIBRARIES   vtkRendering vtkGraphics vtkHybrid QVTK)
+set  (project_FORMS pclviewer.ui colordialog.ui triangulationdialog.ui
+                        setcameradialog.ui tourdialog.ui)
+
+set  (VTK_LIBRARIES vtkRendering vtkGraphics vtkHybrid QVTK)
 
 QT4_WRAP_CPP (project_HEADERS_MOC   ${project_HEADERS})
 QT4_WRAP_UI  (project_FORMS_HEADERS ${project_FORMS})
@@ -29,7 +35,8 @@ qt4_add_resources(UI_RESOURCES resources.qrc)
 ADD_EXECUTABLE  (pcd_viewer ${project_SOURCES}
                                 ${project_FORMS_HEADERS}
                                 ${project_HEADERS_MOC}
-								${UI_RESOURCES})
+                                ${UI_RESOURCES}
+                )
 
 TARGET_LINK_LIBRARIES (pcd_viewer ${QT_LIBRARIES} ${PCL_LIBRARIES} ${VTK_LIBRARIES} pthread)
 
