--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,17 +10,17 @@ include_directories (${PCL_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS})
 link_directories    (${PCL_LIBRARY_DIRS})
 add_definitions     (${PCL_DEFINITIONS})
 
-set  (project_SOURCES main.cpp pclviewer.cpp colordialog.cpp triangulationdialog.cpp
+set  (project_SOURCES main.cpp pcdviewermainwindow.cpp myqvtkwidget.cpp colordialog.cpp triangulationdialog.cpp
                 triangulation_meshes.cpp tourdialog.cpp boundingbox.cpp	worker.cpp
                 setcameradialog.cpp
         )
 
-set  (project_HEADERS pclviewer.h colordialog.h triangulationdialog.h
+set  (project_HEADERS pcdviewermainwindow.h myqvtkwidget.h colordialog.h triangulationdialog.h
                 triangulation_meshes.h setcameradialog.h boundingbox.h worker.h
                 setcameradialog.h tourdialog.h
         )
 
-set  (project_FORMS pclviewer.ui colordialog.ui triangulationdialog.ui
+set  (project_FORMS pcdviewermainwindow.ui colordialog.ui triangulationdialog.ui
                         setcameradialog.ui tourdialog.ui)
 
 set  (VTK_LIBRARIES vtkRendering vtkGraphics vtkHybrid QVTK)
